# govai-hub

./: .env.example  .geminiignore  .gitignore  Fluxograma UX v2.0.md  LICENSE  Procfile  README.md  config.yaml  pyproject.toml  render.yaml  requirements.txt
.cursor/rules/: ui_protection.mdc
data/: agentregistration.json  status.json
docs/: ai-trade-handoff.md  ai_prompts.md  architecture.md  async_background_workers.md  crypto_payment_gateway.md  data_aggregation_engine.md  database_schema.md  governance_flow.md
scripts/: diagnose.py  register_agent.py  registeragent.py  test_connection.py  test_digest.py  test_governance.py
src/: __init__.py
src/ai/: __init__.py  digest_builder.py  digest_generator.py  digest_titles.py  groq_client.py  prompt_builder.py
src/bot/: __init__.py  app.py  callbacks.py  handlers.py  keyboards.py
src/database/: __init__.py  manager.py  models.py
src/fetchers/: __init__.py  coingecko_prices.py  defillama_celo_tvl.py  fetcher_manager.py  governance_fetcher.py  market_fetcher.py  onchain_fetcher.py  payment_fetcher.py  rss_fetcher.py  twitter_fetcher.py
src/scheduler/: __init__.py  ai_trade_reminders.py  governance_executor.py  notifier.py  payment_poller.py  scheduler.py
src/utils/: __init__.py  blockscout_fetcher.py  cache_manager.py  celo_token_registry.py  config_loader.py  defi_links.py  digest_links.py  env_validator.py  etherscan_v2.py  gas_manager.py  logger.py  (+9 more)
tests/: __init__.py  conftest.py  test_ai.py  test_fetchers.py  test_integration.py  test_phase7.py  test_referral_economy_phase8.py  test_user_network.py
